Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,5 @@ build-job:
   tags:
     - docker
   script:
-    - echo  "Start building"
+    - cd src
     - npm install
-    - echo "Build complete."
