--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fetch": "^1.1.0",
+    "http": "^0.0.1-security",
     "mongoose": "^6.7.2",
     "morgan": "^1.10.0",
     "mqtt": "^4.3.7",
