--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "morgan": "^1.10.0",
     "mqtt": "^4.3.7",
     "node": "^19.1.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
